k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tarefas-app
  labels:
    name: tarefas-app
